# spec

./: .gitignore  CHANGELOG.md  RATIONALE.md  README.md  changespec.proto  implementations.yml  integration-safety.md  schema.json  spec.md
conformance/: README.md  certification-levels.md  ci-integration.md  conformance-badge.md  consumer-tests.md  producer-tests.md  run-against-references.md  trademark-policy.md
conformance/runner/: spec.md
conformance/runner/go/: go.mod  runner.go
conformance/runner/python/: runner.py
conformance/runner/typescript/: package-lock.json  package.json  runner.ts  tsconfig.json
conformance/test-vectors/edge-cases/: edge-001.yml  edge-002.yml  edge-003.yml  edge-004.yml  edge-005.yml  edge-006.yml  edge-007.yml  (+8 more)
examples/: api-breaking.json  api-deprecation.json  cosmetic.json  data-handling.json  pricing.json  security-cve.json  tos-update.json
governance/: CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md
reference/go/: examples_test.go  go.mod  schema.json  types.go  validate.go
reference/python/: pyproject.toml
reference/python/changespec/: __init__.py  types.py  validate.py
reference/python/changespec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reference/python/tests/: test_examples.py
reference/typescript/: package-lock.json  package.json  tsconfig.json
security/: SECURITY.md  conformance-security-tests.md  disclosure-policy.md  reference-impl-audit.md  signature-design-review.md  threat-model.md  trust-bootstrap.md  v2-security-roadmap.md
seps/: SEP-TEMPLATE.md
(+103 files in other folders)
