[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "changespec"
version = "1.0.0"
description = "ChangeSpec 1.0 types and validator for Python"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.13.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["changespec*"]
